fix issue #28819 Time line and Schedule not work well in detail of shift trade request.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -321,6 +321,11 @@
 	float: left;
 	border-left: 1px solid rgb(216, 216, 216);
 }
+.shift-trade-swap-detail-timeline-line-no-border 
+{
+	height: 100%;
+	float: left;
+}
 .rtl .shift-trade-swap-detail-timeline-line {
 	float: right;
 	border-left: none;
